--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criticgame</title>
+    <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
     <link rel="stylesheet" href="css/style.css">
@@ -34,7 +34,7 @@
                 </ul>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Actualité
+                    Actualités
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item " href="#">solde</a></li>
@@ -62,7 +62,7 @@
                       </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link color-nav" href="#">Contact</a>
+                <a class="nav-link color-nav" href="#">Contacts</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -76,17 +76,19 @@
   </div>
 
       <section class="news">
-        <h3> Dernieres news</h3>
+        <h3>Nos dernieres infos</h3>
       <div class="card mb-3">
-        <img src="img/zelda.jpg" class="card-img-top" alt="zelda">
+        <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
         <div class="card-body">
-          <h5 class="card-title">The Legend of Zelda : Tears of the Kingdom</h5>
-          <p class="card-text">Ça y est, The Legend of Zelda : Tears of the Kingdom dévoile enfin du gameplay en temps réel. L'occasion pour Eiji Aonuma, le producteur historique de la série, de montrer toute l'ambition de la prochaine exclusivité de la Nintendo Switch. Et ça l'air fou. </p>
+          <h5 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h5>
+          <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
           <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
         </div>
       </div>
+        </a>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
+          <a href="page2.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwarts">
             <div class="card-body">
@@ -94,8 +96,10 @@
               <p class="card-text">La sortie officielle d'Hogwarts Legacy, le jeu en monde ouvert dans l'univers d'Harry Potter, est imminente. Les portes de Poudlard sont sur le point de s'ouvrir et on a pu avoir le droit à une visite en avance. Tout ça pour dire que nous avons testé le jeu et on vous dévoile notre avis en vidéo.</p>
             </div>
           </div>
+        </a>
         </div>
         <div class="col">
+          <a href="page2.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/gow.jpg" class="card-img-top" alt="gofofwar">
             <div class="card-body">
@@ -103,8 +107,10 @@
               <p class="card-text">Kratos, le héros de la saga God of War, a déjà fait une apparition dans un certain nombre de productions… Mais on ne s'attendait pas à ce qu'il débarque dans Diablo 4 !</p>
             </div>
           </div>
+          </a>
         </div>
         <div class="col">
+          <a href="page2.html" style="text-decoration:none; color: #000;">
           <div class="card">
             <img src="img/re4.jpg" class="card-img-top" alt="re4remake">
             <div class="card-body">
@@ -112,6 +118,7 @@
               <p class="card-text">Dans l’ensemble, les joueurs qui ont fait l’acquisition de Resident Evil 4 sont plus que ravis de leur achat. Le souci, c’est que tout le monde ne dispose pas d’un PC suffisamment performant ou d’une PS5 ou d’une Xbox Series X|S rutilante. Pour les joueurs PlayStation, il y avait toujours la version PS4 mais ce n’est pas le choix le plus judicieux puisqu’elle pose de sérieux problèmes !</p>
             </div>
           </div>
+          </a>
         </div>
       </div>
       </div>
