--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-    <link rel="stylesheet" href="css/stylepage2.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 
@@ -75,65 +75,7 @@
     </section>
   </div>
 
-  <section id="gameplay">
-    <div class="presentation">
-      <h1>The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h1>
-      <h2> Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</h2>
-    </div>
-    <div class="image">
-      <div class="container">
-        <img class="zeldaimage" src="img/zelda.jpg" alt="zelda">
-      </div>
-    </div>
-  </section>
-  <section class="article">
-    <p>The Legend of Zelda : Tears of the Kingdom est le dernier opus de la célèbre série de jeux vidéo The Legend of Zelda, qui a captivé des millions de joueurs à travers le monde. Ce nouvel épisode promet de plonger les joueurs dans un monde enchanteur rempli de dangers et de mystères à résoudre. Dans cet article de blog, nous allons vous donner un aperçu de toutes les dernières actualités sur le jeu, pour vous donner une idée de ce qui vous attend dans cet univers fantastique.</p>
-<h3>I. Un retour aux sources de la série</h3>
-<p> Legend of Zelda : Tears of the Kingdom est un retour aux sources pour la série, qui a été salué par les critiques pour son gameplay innovant et ses graphismes époustouflants. Le jeu suit les aventures de Link, un héros légendaire chargé de sauver le royaume d'Hyrule des griffes d'un mal ancien. Les joueurs doivent résoudre des énigmes complexes, combattre des ennemis redoutables et explorer un monde ouvert rempli de secrets et de surprises.</p>
-<h3>II. Des graphismes à couper le souffle</h3>
-<p>Les graphismes de The Legend of Zelda : Tears of the Kingdom sont à couper le souffle, avec des paysages magnifiques qui vous donneront envie d'explorer chaque recoin du royaume d'Hyrule. Les personnages et les ennemis sont également très détaillés, et l'animation est fluide et réaliste. Le jeu est disponible sur une variété de plates-formes, y compris la Nintendo Switch et la Nintendo Switch Lite, ce qui signifie que les joueurs peuvent profiter de la beauté du jeu à tout moment et n'importe où.</p>
-<h3>III. Un gameplay innovant</h3>
-<p>The Legend of Zelda : Tears of the Kingdom offre un gameplay innovant, avec des mécanismes de jeu qui récompensent l'exploration et la résolution d'énigmes. Les joueurs peuvent trouver des armes et des équipements spéciaux en explorant les donjons et les grottes cachées, et utiliser ces objets pour vaincre les ennemis et résoudre les puzzles. Les combats sont également passionnants et intenses, avec des ennemis qui exigent une stratégie et une tactique précises pour être vaincus.</p>
-<h3>IV. Une bande-son épique</h3>
-<p>La bande-son de The Legend of Zelda : Tears of the Kingdom est épique, avec des thèmes musicaux qui vous feront vibrer tout au long du jeu. Les chansons sont variées et adaptées à chaque situation, ce qui ajoute une couche supplémentaire d'immersion dans l'univers du jeu. Les fans de la série apprécieront les clins d'œil aux épisodes précédents de la série, tandis que les nouveaux joueurs seront immédiatement captivés par l'atmosphère envoûtante du jeu.</p>
-<h3>V. Conclusion</h3>
-<p>En somme, The Legend of Zelda : Tears of the Kingdom est un jeu incroyable qui promet d'être l'un des meilleurs de la série. Avec des graphismes à couper le souffle !</p>
-  
-</section>
-  <section class="video">
-    <iframe width="50%" height="100%" src="https://www.youtube.com/embed/QwxBk0_G-I8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    </div>
-  </section>
-  
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
 
       <div class="footer-clean">
         <footer>
