--- a/page2.html
+++ b/page2.html
@@ -102,16 +102,14 @@
 </section>
   <section class="video">
     <iframe width="50%" height="100%" src="https://www.youtube.com/embed/QwxBk0_G-I8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="card" style="width: 40%;">
+      <div class="card-header">
+        A voir aussi
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</li>
+        <li class="list-group-item">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</li>
+        <li class="list-group-item">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</li>
       </ul>
     </div>
   </section>
