--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
     <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylepage3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav"  href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -75,96 +75,47 @@
     </section>
   </div>
 
-      <section class="news">
-        <h1>Nos dernieres infos</h1>
-      <div class="card mb-3">
-        <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
-        <div class="card-body">
-          <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h3>
-          <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
-          <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-        </div>
+  <section id="gameplay">
+    <div class="presentation">
+      <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h1>
+      <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+    </div>
+    <div class="image">
+      <div class="container">
+        <img class="zeldaimage" src="img/hogwarts.jpg" alt="hp">
       </div>
-        </a>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <a href="page3.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwarts">
-            <div class="card-body">
-              <h4 class="card-title">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h4>
-              <p class="card-text">Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</p>
-            </div>
-          </div>
-        </a>
-        </div>
-        <div class="col">
-          <a href="page4.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/gow.jpg" class="card-img-top" alt="gofofwar">
-            <div class="card-body">
-              <h4 class="card-title">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h4>
-              <p class="card-text">Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="page5.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/re4.jpg" class="card-img-top" alt="re4remake">
-            <div class="card-body">
-              <h4 class="card-title">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h4>
-              <p class="card-text">écouvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-      </div>
-      </div>
+    </div>
+  </section>
+  <section class="article">
+    <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
+<h3>I. Date de sortie</h3>
+<p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
+<h3>II.Gameplay :</h3>
+<p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les créatures magiques dangereuses.</p>
+<h3>III.Personnages</h3>
+<p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.</p>
+<h3>IV. Personnalisation</h3>
+<p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts qu'il pourra lancer.</p>
+<h3>V.Bande-son </h3>
+<p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante de l'expérience de jeu.</p>
+<h3>VI.Conclusion </h3>
+<p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
+
 </section>
-     
-<section class="tips">
-  <h2>Dernières astuces</h2>
-<div class="card mb-3">
-  <img src="img/ree4.jpg" class="card-img-top" alt="re4">
-  <div class="card-body">
-    <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</h3>
-    <p class="card-text">Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser. </p>
-    <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-  </div>
-</div>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="img/tloy.jpg" class="card-img-top" alt="thelastofus">
-      <div class="card-body">
-        <h4 class="card-title">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h4>
-        <p class="card-text">Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
+  <section class="video">
+    <iframe width="50%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="card" style="width: 40%;">
+      <div class="card-header">
+        A voir aussi
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</li>
+        <li class="list-group-item">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</li>
+        <li class="list-group-item">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</li>
+      </ul>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwart">
-      <div class="card-body">
-        <h4 class="card-title">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !</h4>
-        <p class="card-text">Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/gt.jpg" class="card-img-top" alt="gt">
-      <div class="card-body">
-        <h4 class="card-title">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h4>
-        <p class="card-text">Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</section>
+  </section>
+  
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
