--- a/page4.html
+++ b/page4.html
@@ -7,7 +7,7 @@
     <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylepage4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav"  href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -75,96 +75,47 @@
     </section>
   </div>
 
-      <section class="news">
-        <h1>Nos dernieres infos</h1>
-      <div class="card mb-3">
-        <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
-        <div class="card-body">
-          <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h3>
-          <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
-          <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-        </div>
+  <section id="gameplay">
+    <div class="presentation">
+      <h1>Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h1>
+      <h2>Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</h2>
+    </div>
+    <div class="image">
+      <div class="container">
+        <img class="zeldaimage" src="img/gow.jpg" alt="gow">
       </div>
-        </a>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <a href="page3.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwarts">
-            <div class="card-body">
-              <h4 class="card-title">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h4>
-              <p class="card-text">Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</p>
-            </div>
-          </div>
-        </a>
-        </div>
-        <div class="col">
-          <a href="page4.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/gow.jpg" class="card-img-top" alt="gofofwar">
-            <div class="card-body">
-              <h4 class="card-title">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h4>
-              <p class="card-text">Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="page5.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/re4.jpg" class="card-img-top" alt="re4remake">
-            <div class="card-body">
-              <h4 class="card-title">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h4>
-              <p class="card-text">écouvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-      </div>
-      </div>
+    </div>
+  </section>
+  <section class="article">
+    <p>Diablo 4 est l'un des jeux les plus attendus de l'année, avec une date de sortie prévue pour la fin de l'année 2023. Dans cet article, nous vous donnons toutes les dernières actualités sur le jeu, notamment l'intégration de Kratos de God of War en tant que personnage jouable.</p>
+<h3>I. Gameplay</h3>
+<p> Diablo 4 propose un gameplay amélioré, avec des graphismes à couper le souffle qui permettent de plonger dans l'univers sombre et mystérieux de la saga Diablo. Les joueurs auront la possibilité de personnaliser leur personnage, d'explorer des donjons, de trouver des objets magiques et de combattre des ennemis redoutables.</p>
+<h3>II.Nouvelles fonctionnalités :</h3>
+<p>Diablo 4 présente également de nouvelles fonctionnalités qui permettent de renouveler le gameplay. Parmi celles-ci, on trouve le mode multijoueur en ligne, qui permettra aux joueurs du monde entier de jouer ensemble. On trouve également le système de montures, qui permettra aux joueurs de se déplacer plus rapidement dans le jeu.</p>
+<h3>III.Kratos en tant que personnage jouable</h3>
+<p>LLa grande nouvelle pour les fans de la saga God of War est que Kratos sera intégré en tant que personnage jouable dans Diablo 4. Cette annonce a été faite lors de la BlizzConline de février 2023, et elle a créé l'effervescence chez les fans des deux sagas. Les images dévoilées montrent un Kratos en armure, équipé de son épée et de son bouclier. Les joueurs pourront ainsi incarner le célèbre guerrier spartiate et découvrir de nouvelles capacités pour le personnage.</p>
+<h3>IV. Personnages</h3>
+<p>LEn plus de Kratos, les joueurs auront également la possibilité de jouer d'autres personnages emblématiques de la saga Diablo, tels que la sorcière et le barbare. Chacun des personnages aura des compétences et des capacités spécifiques, offrant ainsi une grande variété de gameplay.</p>
+<h3>V.Histoire </h3>
+<p>L'histoire de Diablo 4 est centrée sur Lilith, la fille de Mephisto, l'un des démons principaux de la saga. Lilith sera le personnage principal de l'histoire, qui se déroule plusieurs années après les événements de Diablo 3. Les joueurs devront enquêter sur les mystères de l'univers de Diablo, combattre des ennemis redoutables et découvrir des secrets cachés.</p>
+<h3>VI.Conclusion </h3>
+<p>En conclusion, Diablo 4 est un jeu très attendu qui promet d'être le meilleur épisode de la saga Diablo. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, le jeu offre une expérience de jeu inoubliable pour tous les fans de la saga. </p>
+
 </section>
-     
-<section class="tips">
-  <h2>Dernières astuces</h2>
-<div class="card mb-3">
-  <img src="img/ree4.jpg" class="card-img-top" alt="re4">
-  <div class="card-body">
-    <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</h3>
-    <p class="card-text">Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser. </p>
-    <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-  </div>
-</div>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="img/tloy.jpg" class="card-img-top" alt="thelastofus">
-      <div class="card-body">
-        <h4 class="card-title">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h4>
-        <p class="card-text">Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
+  <section class="video">
+    <iframe width="50%" height="100%" src="https://www.youtube.com/embed/GxtyueYFmqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="card" style="width: 40%;">
+      <div class="card-header">
+        A voir aussi
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</li>
+        <li class="list-group-item">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</li>
+        <li class="list-group-item">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</li>
+      </ul>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwart">
-      <div class="card-body">
-        <h4 class="card-title">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !</h4>
-        <p class="card-text">Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/gt.jpg" class="card-img-top" alt="gt">
-      <div class="card-body">
-        <h4 class="card-title">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h4>
-        <p class="card-text">Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</section>
+  </section>
+  
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
