--- a/page5.html
+++ b/page5.html
@@ -7,7 +7,7 @@
     <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylepage4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav"  href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -75,96 +75,47 @@
     </section>
   </div>
 
-      <section class="news">
-        <h1>Nos dernieres infos</h1>
-      <div class="card mb-3">
-        <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
-        <div class="card-body">
-          <h3 class="card-title"> The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</h3>
-          <p class="card-text">Plongez dans l'aventure épique de The Legend of Zelda: Tears of the Kingdom, un monde magique rempli de défis à surmonter et de mystères à découvrir ! Ca à l'air fou !</p>
-          <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-        </div>
+  <section id="gameplay">
+    <div class="presentation">
+      <h1>« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h1>
+      <h2>Découvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</h2>
+    </div>
+    <div class="image">
+      <div class="container">
+        <img class="zeldaimage" src="img/re4.jpg" alt="re">
       </div>
-        </a>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <a href="page3.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwarts">
-            <div class="card-body">
-              <h4 class="card-title">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h4>
-              <p class="card-text">Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</p>
-            </div>
-          </div>
-        </a>
-        </div>
-        <div class="col">
-          <a href="page4.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/gow.jpg" class="card-img-top" alt="gofofwar">
-            <div class="card-body">
-              <h4 class="card-title">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h4>
-              <p class="card-text">Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="page5.html" style="text-decoration:none; color: #000;">
-          <div class="card">
-            <img src="img/re4.jpg" class="card-img-top" alt="re4remake">
-            <div class="card-body">
-              <h4 class="card-title">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h4>
-              <p class="card-text">écouvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-      </div>
-      </div>
+    </div>
+  </section>
+  <section class="article">
+    <p>Resident Evil 4 est l'un des jeux les plus célèbres de la franchise de jeux vidéo Resident Evil, développée par Capcom. Sorti en 2005, le jeu a marqué les esprits des joueurs avec son gameplay innovant et son histoire captivante. Capcom a annoncé en 2021 qu'un remake de Resident Evil 4 est en préparation pour les consoles de nouvelle génération. Dans cet article, nous vous donnons toutes les dernières actualités sur Resident Evil 4 Remake.</p>
+<h3>I. Date de sortie</h3>
+<p>La date de sortie de Resident Evil 4 Remake n'a pas encore été annoncée officiellement, mais il est prévu que le jeu soit disponible pour PlayStation 5, Xbox Series X/S et PC. Les fans attendent avec impatience la sortie de ce jeu très attendu.</p>
+<h3>II.Gameplay</h3>
+<p>Resident Evil 4 Remake promet une expérience de jeu passionnante, avec un gameplay amélioré pour les consoles de nouvelle génération. Le joueur incarne Leon S. Kennedy, un agent spécial envoyé en mission pour sauver la fille du président des États-Unis, kidnappée par une secte mystérieuse. Le joueur doit naviguer à travers une série de défis, y compris la gestion des ressources et la lutte contre les ennemis, pour atteindre son objectif final.</p>
+<h3>III.Graphismes</h3>
+<p>Les graphismes de Resident Evil 4 Remake sont une amélioration significative par rapport à l'original. Les environnements sont plus détaillés et les personnages sont plus réalistes. Les cinématiques ont également été améliorées pour une expérience de jeu plus immersive.</p>
+<h3>La lunette du sniper</h3>
+<p>Une des critiques les plus communes pour la version PS4 de Resident Evil 4 Remake est que la lunette du sniper est inutilisable. Les joueurs ont rapporté que la lunette tremble constamment et qu'il est difficile de viser correctement. Cela a suscité des inquiétudes quant à la qualité générale du jeu, mais Capcom a assuré aux fans que le problème sera résolu avant la sortie officielle du jeu.</p>
+<h3>V.Réponse des fans</h3>
+<p>Les fans ont eu une réponse mitigée à l'annonce de Resident Evil 4 Remake. Certains étaient excités de voir une version mise à jour de leur jeu préféré, tandis que d'autres ont exprimé leur inquiétude quant à la qualité du remake. Cependant, Capcom a réaffirmé son engagement à fournir une expérience de jeu de qualité supérieure.</p>
+<h3>VI.Conclusion</h3>
+<p> En conclusion, Resident Evil 4 Remake est un jeu très attendu qui promet une expérience de jeu passionnante pour les fans de la franchise Resident Evil. Avec un gameplay amélioré, des graphismes améliorés et une histoire captivante, ce jeu est certainement un must-play pour les fans de jeux d'action et de survie. Bien que la critique de la lunette du sniper pour la version PS4 soit préoccupante, les fans peuvent être assurés que Capcom travaille dur  !</p>
+
 </section>
-     
-<section class="tips">
-  <h2>Dernières astuces</h2>
-<div class="card mb-3">
-  <img src="img/ree4.jpg" class="card-img-top" alt="re4">
-  <div class="card-body">
-    <h3 class="card-title">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</h3>
-    <p class="card-text">Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser. </p>
-    <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
-  </div>
-</div>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="img/tloy.jpg" class="card-img-top" alt="thelastofus">
-      <div class="card-body">
-        <h4 class="card-title">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h4>
-        <p class="card-text">Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
+  <section class="video">
+    <iframe width="50%" height="100%" src="https://www.youtube.com/embed/j5Xv2lM9wes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="card" style="width: 40%;">
+      <div class="card-header">
+        A voir aussi
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</li>
+        <li class="list-group-item">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</li>
+        <li class="list-group-item">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</li>
+      </ul>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwart">
-      <div class="card-body">
-        <h4 class="card-title">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !</h4>
-        <p class="card-text">Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="img/gt.jpg" class="card-img-top" alt="gt">
-      <div class="card-body">
-        <h4 class="card-title">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h4>
-        <p class="card-text">Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</section>
+  </section>
+  
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
