--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
           </div>
         </div>
       </nav>
-    </section>
   </div>
 
-      <section class="news">
+      <div class="news container">
         <h1>Nos dernieres infos</h1>
       <div class="card mb-3">
         <a href="page2.html" style="text-decoration:none; color: #000;"><img src="img/zelda.jpg" class="card-img-top" alt="zelda"> 
@@ -86,11 +85,11 @@
         </div>
       </div>
         </a>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4" >
         <div class="col">
           <a href="page3.html" style="text-decoration:none; color: #000;">
           <div class="card">
-            <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwarts">
+            <img src="img/hogwarts.jpg" class="card-img-bot" alt="hogwarts">
             <div class="card-body">
               <h4 class="card-title">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h4>
               <p class="card-text">Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</p>
@@ -101,7 +100,7 @@
         <div class="col">
           <a href="page4.html" style="text-decoration:none; color: #000;">
           <div class="card">
-            <img src="img/gow.jpg" class="card-img-top" alt="gofofwar">
+            <img src="img/gow.jpg" class="card-img-bot" alt="gofofwar">
             <div class="card-body">
               <h4 class="card-title">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</h4>
               <p class="card-text">Découvrez toutes les dernières actualités de Diablo 4, notamment l'intégration de Kratos de God of War en tant que personnage jouable. Avec des graphismes à couper le souffle, un gameplay amélioré et de nouvelles fonctionnalités, Diablo 4 promet d'être le meilleur épisode de la saga Diablo.</p>
@@ -112,20 +111,20 @@
         <div class="col">
           <a href="page5.html" style="text-decoration:none; color: #000;">
           <div class="card">
-            <img src="img/re4.jpg" class="card-img-top" alt="re4remake">
+            <img src="img/re4.jpg" class="card-img-bot" alt="re4remake">
             <div class="card-body">
               <h4 class="card-title">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h4>
-              <p class="card-text">écouvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</p>
+              <p class="card-text">Découvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</p>
             </div>
           </div>
           </a>
         </div>
       </div>
       </div>
-</section>
+    </div>
      
-<section class="tips">
-  <h2>Dernières astuces</h2>
+<div class="tips container mt-4">
+  <h2>Nos dernières astuces</h2>
 <div class="card mb-3">
   <img src="img/ree4.jpg" class="card-img-top" alt="re4">
   <div class="card-body">
@@ -137,7 +136,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="img/tloy.jpg" class="card-img-top" alt="thelastofus">
+      <img src="img/tloy.jpg" class="card-img-bot" alt="thelastofus">
       <div class="card-body">
         <h4 class="card-title">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h4>
         <p class="card-text">Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
@@ -146,7 +145,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="img/hogwarts.jpg" class="card-img-top" alt="hogwart">
+      <img src="img/hogwarts.jpg" class="card-img-bot" alt="hogwart">
       <div class="card-body">
         <h4 class="card-title">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !</h4>
         <p class="card-text">Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
@@ -155,7 +154,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="img/gt.jpg" class="card-img-top" alt="gt">
+      <img src="img/gt.jpg" class="card-img-bot" alt="gt">
       <div class="card-body">
         <h4 class="card-title">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h4>
         <p class="card-text">Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</p>
@@ -164,9 +163,10 @@
   </div>
 </div>
 </div>
-</section>
+<div>
 
-    <nav aria-label="Page navigation example">
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
         <ul class="pagination justify-content-center">
           <li class="page-item">
             <a class="page-link" href="#" aria-label="Previous">
@@ -183,6 +183,7 @@
           </li>
         </ul>
       </nav>
+    </div>
 
       <div class="footer-clean">
         <footer>
